--- a/assets/css/home-page-styles.css
+++ b/assets/css/home-page-styles.css
@@ -1,5 +1,5 @@
-@import url('reset.css');
-@import url('global.css');
+@import url("reset.css");
+@import url("global.css");
 
 body {
   background-color: var(--primary-color);
@@ -7,7 +7,7 @@ body {
 
 body::before {
   content: "";
-  background-image: url('../images/spider-man-background.jpg');
+  background-image: url("../images/spider-man-background.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -50,7 +50,7 @@ body::before {
   width: 100%;
   height: 70vh;
   position: absolute;
-  transition: filter .5s ease-in-out;
+  transition: filter 0.5s ease-in-out;
 }
 
 .s-card:nth-child(1) {
@@ -150,19 +150,19 @@ body::before {
 
 .s-card--hovered .s-card__image {
   transform: scale(1.4);
-  filter: drop-shadow(30px 10px 4px rgba(0, 0, 0, .5));
+  filter: drop-shadow(30px 10px 4px rgba(0, 0, 0, 0.5));
 }
 
 body#spider-man-01-hovered::before {
-  background-image: url('../images/pic-sm-bg-01.jpg');
+  background-image: url("../images/pic-sm-bg-01.jpg");
 }
 
 body#spider-man-02-hovered::before {
-  background-image: url('../images/pic-sm-bg-02.jpg');
+  background-image: url("../images/pic-sm-bg-02.jpg");
 }
 
 body#spider-man-03-hovered::before {
-  background-image: url('../images/pic-sm-bg-03.jpg');
+  background-image: url("../images/pic-sm-bg-03.jpg");
 }
 
 body[id^="spider-man-"]::before {
